# Progetto_Laboratorio

./: .gitignore  Bullets.cpp  Bullets.h  CMakeLists.txt  Enemy.cpp  Enemy.h  GameCharacter.cpp  GameCharacter.h  GameEngine.cpp  GameEngine.h  MachineGun.cpp  MachineGun.h  Menu.cpp  Menu.h  Player.cpp  Player.h  Sound.cpp  Sound.h  Weapon.cpp  Weapon.h  Window.cpp  Window.h  main.cpp
Test/: CollisionTest.cpp
cppFiles/: Bullet.cpp  Enemy.cpp  GameCharacter.cpp  GameEngine.cpp  MachineGun.cpp  Menu.cpp  Player.cpp  Sound.cpp  Weapon.cpp  Window.cpp  main.cpp
hFiles/: Bullet.h  Enemy.h  GameCharacter.h  GameEngine.h  MachineGun.h  Menu.h  Player.h  Weapon.h  Window.h
